# src/routes/user.route.js
@@ -1,16 +1,19 @@
 const { Router } = require("express");
 
-const UsuarioController = require("../controllers/UsuarioController");
-const usuarioSchema = require("../schemas/userSchema");
-const validarUsuario = require("../middleware/validateUser");
+const userController = require("../controllers/UserController");
+const userSchema = require("../schemas/userSchema");
+const validarUser = require("../middleware/validateUser");
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./doc.swagger.json");
+const {hasPermission} = require("../middleware/hasPermission")
+const router = new Router();
 
-const usuarioRoutes = new Router();
 
-usuarioRoutes.post(
-  "/",
-  validarUsuario(usuarioSchema),
+router.get("/", hasPermission(["ler_usuarios"]), userController.findAll);
+router.get("/:id", hasPermission(["ler_usuarios"]), userController.findById);
+router.post(
+  "/", hasPermission(["criar_usuario"]),
+  validarUser(userSchema),
   /*  
             #swagger.tags = ['Usuário'],
             #swagger.parameters['body'] = {
@@ -21,39 +24,40 @@ usuarioRoutes.post(
                   sexo: "feminino, masculino ou outros",
                   $cpf: "10987654321",  
                   $email: "teste@gmail.com",
-                  $senha: "123",
+                  $password: "123",
                   data_nascimento: "1996-12-15",
             }
         }
     */
-  UsuarioController.cadastrar
+  userController.createNewUser
 );
 
-// Necessários ajustes na função validarUsuario do middleware (cpf)
-usuarioRoutes.put(
-  "/:usuarioId",
+// Necessários ajustes na função validarUser do middleware (cpf)
+router.put(
+  "/:userId", hasPermission(["editar_usuario"]),
   /*
             #swagger.tags = ['Usuário],
-            #swagger.parameters['usuarioId'] = {
+            #swagger.parameters['userId'] = {
                 in: 'body',
                 schema: {
                     $nome: "Nome completo",
                     sexo: "feminino, masculino ou outros",
                     $cpf: "10987654321",  
                     $email: "teste@gmail.com",
-                    $senha: "123",
+                    $password: "123",
                     data_nascimento: "1996-12-15",
                 }
             }
         */
 
-  //  validarUsuario(usuarioSchema),
+  //  validarUser(userSchema),
 
-  UsuarioController.atualizar
+  userController.updateUser
 );
 
-usuarioRoutes.get("/", swaggerUi.setup(swaggerDocument));
+router.get("/", swaggerUi.setup(swaggerDocument));
 
 //Rota para deletar conta ...
+router.delete("/id", hasPermission(["remover_usuario"]), userController.deleteUser);
 
-module.exports = usuarioRoutes;
+module.exports = router;
