# src/schemas/actionSchema.js
@@ -1,11 +1,11 @@
 const yup = require("yup");
 
-const descricaoSchema = yup.object().shape({
-  usuarioId: yup.number().integer(),
+const actionSchema = yup.object().shape({
+  userId: yup.number().integer(),
   local_id: yup.number().integer(),
   data_visita: yup.date().default(() => new Date()),
   desc_fauna: yup.string().nullable(),
   desc_flora: yup.string().nullable(),
 });
 
-module.exports = descricaoSchema;
+module.exports = actionSchema;
